Contrast fix

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,5 @@
 :root {
-    --background-color: #14130f;
+    --background-color: gi#1a1915;
     --card-color: black;
     --h1-primary-color: red;
     --h1-secondary-color: rgb(176, 8, 8); 
